Refactor: Update play screen layout and styles for War Tanks II
- Changed the playfield background image to 'map-01.png'.
- Redesigned the play screen structure with a new layout and added a play HUD.
- Updated the title in play.html to 'War Tanks II — Поле боя'.
- Modified the brand name in select.html to 'WAR TANKS II'.
- Enhanced responsive design for smaller screens.

--- a/select.html
+++ b/select.html
@@ -13,7 +13,7 @@
 <body class="menu-screen">
     <div class="menu-overlay">
         <header class="menu-header">
-            <span class="menu-brand">SEGMENTO</span>
+            <span class="menu-brand">WAR TANKS II</span>
         </header>
         <main class="menu-panel select-panel" role="main">
             <h1 class="panel-title">Выбор миссии</h1>
