--- a/play.html
+++ b/play.html
@@ -1,33 +1,22 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>War Tanks — Бой</title>
+    <title>War Tanks II — Поле боя</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="menu.css">
     <script src="app.js" defer></script>
 </head>
-<body class="menu-screen" data-disable-bgm="true">
-    <div class="menu-overlay">
-        <header class="menu-header">
-            <a class="menu-brand" href="menu.html">SEGMENTO</a>
-        </header>
-        <main class="menu-panel play-panel" role="main">
-            <div class="play-panel__header">
-                <h1 class="panel-title">Боевой эфир</h1>
-                <p class="panel-subtitle">Театр военных действий: Desert Strike</p>
-            </div>
-            <div class="playfield-frame" role="region" aria-label="Игровое поле">
-                <div class="playfield" role="img" aria-label="Пустынная карта с рекой и холмами" style="width: 800px; height: 640px;"></div>
-            </div>
-            <div class="button-row">
-                <a class="retro-button ghost" href="select.html">Назад к выбору</a>
-                <a class="retro-button" href="menu.html">Главное меню</a>
-            </div>
-        </main>
-    </div>
+<body class="menu-screen play-screen" data-disable-bgm="true">
+    <main class="play-shell" role="main">
+        <div class="play-hud" aria-label="Игровая панель">
+            <span class="play-logo">WAR TANKS II</span>
+            <a class="play-menu-button" href="menu.html">МЕНЮ</a>
+        </div>
+        <div class="playfield" role="img" aria-label="Игровая карта Desert Strike"></div>
+    </main>
 </body>
 </html>
