Реализован туман войны с двухуровневой системой видимости
- Добавлен туман войны с внутренним (240px) и внешним (336px) радиусами
- Плавный переход видимости между радиусами через сетку 16x16px
- Автоматическое восстановление тумана через 3 секунды после ухода игрока
- Противник убирает туман только когда виден игроку
- Визуальный эффект тумана с базовой прозрачностью 45%

--- a/play.html
+++ b/play.html
@@ -11,11 +11,13 @@
     <script src="app.js" defer></script>
 </head>
 <body class="menu-screen play-screen" data-disable-bgm="true">
-    <main class="play-shell" role="main">
-        <div class="play-hud" aria-label="Игровая панель">
+    <header class="play-header" role="banner">
+        <div class="play-header__inner" aria-label="Панель управления">
             <span class="play-logo">WAR TANKS II</span>
             <a class="play-menu-button" href="menu.html">МЕНЮ</a>
         </div>
+    </header>рра
+    <main class="play-shell" role="main">
         <div class="playfield" role="img" aria-label="Игровая карта Desert Strike"></div>
     </main>
 </body>
