--- a/select.html
+++ b/select.html
@@ -62,8 +62,8 @@
                     </div>
                 </section>
                 <div class="button-row">
-                    <button class="retro-button ghost" type="submit" name="action" value="back">Назад</button>
-                    <button class="retro-button" type="submit" name="action" value="start">В бой!</button>
+                    <button class="retro-button ghost" type="submit" name="action" value="back" formaction="menu.html" formmethod="get" formnovalidate>Назад</button>
+                    <button class="retro-button" type="submit" name="action" value="start" formaction="play.html" formmethod="get">В бой!</button>
                 </div>
             </form>
         </main>
