feat: Реализована основа многопользовательского режима с лобби, сетевым взаимодействием и управлением игрой.

--- a/play.html
+++ b/play.html
@@ -8,7 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="menu.css">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="app.js" defer></script>
+    <script src="js/game-manager.js" type="module"></script>
 </head>
 <body class="menu-screen play-screen" data-disable-bgm="true">
     <header class="play-header" role="banner">
