--- a/menu.html
+++ b/menu.html
@@ -18,6 +18,7 @@
         <main class="menu-panel" role="navigation" aria-label="Основное меню">
             <ul class="menu-list">
                 <li class="menu-item"><a href="brifing.html" class="menu-link">Single Play</a></li>
+                <li class="menu-item"><a href="lobby.html" class="menu-link">Multiplayer</a></li>
                 <li class="menu-item"><a href="settings.html" class="menu-link">Settings</a></li>
                 <li class="menu-item"><a href="#records" class="menu-link">Records</a></li>
                 <li class="menu-item"><a href="#credits" class="menu-link">Credits</a></li>
