feat: Добавлена система рендеринга и управления игрой, а также обновлен стиль HUD.

--- a/play.html
+++ b/play.html
@@ -18,7 +18,7 @@
             <span class="play-logo">WAR TANKS II</span>
             <a class="play-menu-button" href="menu.html">МЕНЮ</a>
         </div>
-    </header>рра
+    </header>
     <main class="play-shell" role="main">
         <div class="playfield" role="img" aria-label="Игровая карта Desert Strike"></div>
     </main>
