feat: Добавлены разделы "Рекорды" и "Об авторах" в меню с логикой переключения по хешу URL и обновлено название игры на "WAR TANKS II".

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="menu-screen">
     <div class="menu-overlay">
         <main class="menu-panel intro-panel" role="main">
-            <h1 class="game-title">WAR TANKS</h1>
+            <h1 class="game-title">WAR TANKS II</h1>
             <form class="player-form" action="menu.html" method="get">
                 <label class="form-label" for="player-name">Имя игрока</label>
                 <input class="retro-input" type="text" id="player-name" name="player" placeholder="Commander" required>
