--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
         <header class="menu-header">
             <a class="menu-brand" href="index.html">WAR TANKS II</a>
         </header>
-        <main class="menu-panel" role="navigation" aria-label="Основное меню">
+        <main class="menu-panel main-menu-panel" role="navigation" aria-label="Основное меню">
             <ul class="menu-list">
                 <li class="menu-item"><a href="brifing.html" class="menu-link">Single Play</a></li>
                 <li class="menu-item"><a href="lobby.html" class="menu-link">Multiplayer</a></li>
@@ -25,6 +25,37 @@
                 <li class="menu-item"><a href="index.html" class="menu-link">« BACK</a></li>
             </ul>
         </main>
+
+        <!-- Раздел Рекорды -->
+        <section id="records-panel" class="menu-panel secondary-panel" style="display: none;">
+            <h2 class="panel-title">TOP COMMANDERS</h2>
+            <div class="records-list">
+                <div class="record-item"><span>1. KRUGER</span><span>4500</span></div>
+                <div class="record-item"><span>2. VIXEN</span><span>3800</span></div>
+                <div class="record-item"><span>3. RAZOR</span><span>3100</span></div>
+                <div class="record-item"><span>4. GHOST</span><span>2400</span></div>
+                <div class="record-item"><span>5. BLAZE</span><span>1900</span></div>
+            </div>
+            <div class="menu-item" style="margin-top: 2rem;">
+                <a href="#" class="menu-link back-to-main">« BACK</a>
+            </div>
+        </section>
+
+        <!-- Раздел Об авторах -->
+        <section id="credits-panel" class="menu-panel secondary-panel" style="display: none;">
+            <h2 class="panel-title">MISSION CONTROL</h2>
+            <div class="credits-content">
+                <p>DEVELOPED BY</p>
+                <p class="accent-text">VALENTIN & AI</p>
+                <p style="margin-top: 1.5rem;">TECHNOLOGIES</p>
+                <p class="muted-text small">HTML5 / CSS3 / ES6</p>
+                <p class="muted-text small">CANVAS 2D API</p>
+                <p class="muted-text small">SUPABASE REALTIME</p>
+            </div>
+            <div class="menu-item" style="margin-top: 2rem;">
+                <a href="#" class="menu-link back-to-main">« BACK</a>
+            </div>
+        </section>
     </div>
 </body>
 </html>
