--- a/select.html
+++ b/select.html
@@ -258,7 +258,10 @@
           const form = document.getElementById('play-form');
           const elements = form.elements;
           for (let i = 0; i < elements.length; i++) {
-            elements[i].disabled = true;
+            // Не отключаем скрытые поля, иначе они не отправятся!
+            if (elements[i].type !== 'hidden') {
+                elements[i].disabled = true;
+            }
           }
 
           countdownInterval = setInterval(() => {
